# analisis_programas_agentes

./: .gitignore  README.md  agentes_de_analisis.py  analisis_snies.py  creador_reporte.py  estado.py  lector.py  main.py  programa_autofill.py  pyproject.toml
proyectos/educacionsalud/: estado.json  reporte.html  seleccion.json
proyectos/nanomateriales/: estado.json  reporte.html  resumen.html  seleccion.json  seleccion.json2
static/: shell.html
static/pages/: programas.html  reporte.html  reportes.html  revision_programas - copia.html  revision_programas.html
